<resources>
    <string name="app_name">Goal Buddies</string>

    <!-- Strings related to search dialog -->
    <string name="dialog_username_search_title">Search</string>
    <string name="dialog_username_search_message">Please input the desired user\'s username.</string>

    <!-- Strings related to nav menu -->
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_goals_current_header">Goals In Progress</string>
    <string name="nav_goals_finished_header">Finished Goals</string>
    <string name="nav_goals_recurring">Recurring</string>
    <string name="nav_goals_onetime">One-Time</string>
    <string name="nav_social_header">Social</string>
    <string name="nav_social_friends">Friends</string>
    <string name="nav_social_incoming">Incoming Requests</string>
    <string name="nav_social_blocked">Blocked</string>
    <string name="nav_technical_header">Technical</string>
    <string name="nav_technical_about">About</string>
    <string name="nav_technical_logout">Logout</string>

    <!-- Strings related to profile -->
    <string name="profile_menu_request_friend">Request</string>
    <string name="profile_menu_cancel_friend">Cancel</string>
    <string name="profile_menu_accept_friend">Accept</string>
    <string name="profile_menu_reject_friend">Reject</string>
    <string name="profile_menu_unfriend_friend">Unfriend</string>
    <string name="profile_menu_block_friend">Block</string>
    <string name="profile_menu_unblock_friend">Unblock</string>
    <string name="profile_empty_goal_list">No pending goals in this category</string>
    <string name="profile_section_label_username">Username</string>
    <string name="profile_section_label_city">Location</string>
    <string name="profile_section_label_name">Name</string>
    <string name="profile_section_label_goals_completed">Number of completed goals</string>
    <string name="profile_section_label_times_motivated">Number of motivations given</string>
    <string name="fragment_social_unblock_message">Do you wish to unblock this user?</string>
    <string name="dialog_profile_motivate_goal_title">Motivation</string>
    <string name="dialog_profile_motivate_goal_body">Do you want to motivate this goal?</string>

    <!-- Strings related to adding goals -->
    <string name="add_goal_section_label_description">Description</string>
    <string name="add_goal_section_label_type">Type</string>
    <string name="add_goal_section_label_icon">Icon</string>
    <string name="add_goal_section_label_days_to_finish">Days to Finish</string>
    <string name="add_goal_success">Goal successfully added! Good luck!</string>
    <string name="add_goal_section_button_submit">Submit Goal</string>
    <string-array name="add_goal_type_array">
        <item>Recurring</item>
        <item>One-Time</item>
    </string-array>
    <string-array name="add_goal_icon_array">
        <item>Star</item>
        <item>Book</item>
        <item>Cutlery</item>
        <item>Home</item>
        <item>USD</item>
        <item>User</item>
        <item>Education</item>
        <item>Shopping Cart</item>
        <item>Globe</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="login_prompt_username">Username</string>
    <string name="login_prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_main">My Goals</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_refresh">Refresh</string>

    <string name="empty_goal_list">No goals found, make one today!</string>
    <string name="empty_friend_list">No social interactions found, connect today!</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
