<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_dashboard" />
    </group>

    <item android:title="@string/nav_goals_current_header">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_current_recurring"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/nav_goals_recurring" />
                <item
                    android:id="@+id/nav_current_onetime"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/nav_goals_onetime" />
            </group>
        </menu>
    </item>

    <item android:title="@string/nav_goals_finished_header">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_finished_recurring"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/nav_goals_recurring" />
                <item
                    android:id="@+id/nav_finished_onetime"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/nav_goals_onetime" />
            </group>
        </menu>
    </item>

    <item android:title="@string/nav_social_header">
        <menu>
            <item
                android:id="@+id/nav_friends"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_social_friends" />
            <item
                android:id="@+id/nav_incoming"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_social_incoming" />
            <item
                android:id="@+id/nav_blocked"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_social_blocked" />
        </menu>
    </item>

    <item android:title="@string/nav_technical_header">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_technical_about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_technical_logout" />
        </menu>
    </item>

</menu>
