<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.bryanlau.goalbuddiesandroid.Goals.AddGoalActivity">

    <ProgressBar
        android:id="@+id/add_goal_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight=".70" />

    <LinearLayout
        android:id="@+id/add_goal_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/add_goal_section_label_description"
            android:textColor="@color/darkblue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/add_goal_section_body_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textAutoCorrect"
            android:textColor="#000"
            android:textSize="18sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:text="@string/add_goal_section_label_type"
            android:textColor="@color/darkblue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/add_goal_section_body_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:text="@string/add_goal_section_label_icon"
            android:textColor="@color/darkblue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/add_goal_section_body_icon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:text="@string/add_goal_section_label_days_to_finish"
            android:textColor="@color/darkblue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/add_goal_section_body_days_to_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="#000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/add_goal_section_button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_goal_section_button_submit"/>

    </LinearLayout>

</LinearLayout>
