<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".Social.ProfileActivity$ProfileFragment">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/profile_section_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/profile_section_label_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_section_label_username"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkblue" />
        <TextView
            android:id="@+id/profile_section_body_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_section_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/profile_section_label_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_section_label_city"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkblue" />
        <TextView
            android:id="@+id/profile_section_body_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_section_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/profile_section_label_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_section_label_name"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkblue" />
        <TextView
            android:id="@+id/profile_section_body_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_section_goals_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/profile_section_label_goals_completed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_section_label_goals_completed"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkblue" />
        <TextView
            android:id="@+id/profile_section_body_goals_completed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_section_times_motivated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/profile_section_label_times_motivated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_section_label_times_motivated"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkblue" />
        <TextView
            android:id="@+id/profile_section_body_times_motivated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
